[metadata]
name = openapi_server
version = 1.0.0
description = 会员系统前后端分离接口文档
long_description = file: README.md
keywords = OpenAPI 会员系统 API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
